# battleship

./: .gitmodules  2018 05 02.ipynb  20180608 GMM Example.ipynb  20180618 Prototyping Pytorch Scene Gen and Gradient Descent on IK Projection Operator.ipynb  2018_05_03_Pyro_fitting_generative_scripts.ipynb  2018_05_04_pyro_fitting_forests.ipynb  Short Talk on MIP Battleship Configuration Projection.ipynb  battleship_board.py  battleship_board_rbt.py  generate_board_samples.py  setup_environment.sh
cpp/: CMakeLists.txt  battleship_utils.cc  battleship_utils.h  battleship_utils_py.cc
